-> Changed download links to point to sourceforge

--- a/homepage/input/development_de.html
+++ b/homepage/input/development_de.html
@@ -175,10 +175,11 @@ sind Sie jederzeit willkommen!</p>
   <a name="app">Programmierung der Anwendung &quot;Enigma&quot;</a></h3>
 
   <p>Wenn Sie die neuste Entwicklerversion von Enigma herunterladen wollen,
-  m&uuml;ssen Sie den Quelltext aus dem <a
-  href="https://developer.berlios.de/svn/?group_id=3972">Subversion Repository
-  bei Berlios</a> auschecken. F&uuml;r anonymen Zugriff, rufen Sie einfach</p>
-  <pre>svn checkout svn://svn.berlios.de/enigma-game/trunk</pre>
+  m&uuml;ssen Sie den Quelltext aus dem
+  <a href="http://sourceforge.net/p/enigma-game/source/2236/tree/">
+  Subversion Repository bei sourceforge</a> auschecken. F&uuml;r anonymen Zugriff,
+  rufen Sie einfach</p>
+  <pre>svn checkout svn://svn.code.sf.net/p/enigma-game/source/trunk</pre>
   <p>auf, um die aktuelle Revision des n&auml;chsten gro&szlig;en Release
   herunterzuladen. Bitte beachten Sie dabei, dass diese nur einen
   Schnappschuss in der Entwicklung darstellt, und die Revision sicherlich
@@ -196,8 +197,8 @@ sind Sie jederzeit willkommen!</p>
   </table>
 
   <p>Sie erhalten einen aktuellen &Uuml;berblick &uuml;ber die existierenden
-  Zweige mittels <a href="http://svn.berlios.de/wsvn/enigma-game">Berlios
-  WebSVN</a>.</p>
+  Zweige mittels <a href="http://sourceforge.net/p/enigma-game/source/2236/tree/">
+  sourceforge WebSVN</a>.</p>
 
   <p>F&uuml;r die Entwicklungsarbeiten empfehlen wir eine Unix-Plattform zur
   Kompilation. Dort erfolgen Kompilierung und Installation einfach durch:</p>
