--- a/homepage/input/download_de.html
+++ b/homepage/input/download_de.html
@@ -32,60 +32,60 @@ dieser Seite nach folgenden Kategorien sortiert:
 
   <ul>
   <li><ul style="list-style-type:none"><li><b>Windows '95 und sp&auml;ter, einschlie&szlig;lich Windows 7</b>
-    <a href="http://download.berlios.de/enigma-game/Enigma-1.01-w7.exe">
+    <a href="http://downloads.sourceforge.net/project/enigma-game/Release%201.01/Enigma-1.01-w7.exe">
         Vollst&auml;ndige Installation (1.01)</a> etwa 15 MB</li>
     <li>md5 - d2a8a16453880660647afd4111d0c81f</li>
     <li>sha256 - 2d34428d57e52bff9338d358fa37d74326c6c51849fa2e8a1aedbe0d2cb12245</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Windows '95 und sp&auml;ter, einschlie&szlig;lich Windows 7</b>
-    <a href="http://download.berlios.de/enigma-game/Enigma-1.01-min-w7.exe">
+    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-1.01-min-w7.exe">
         Minimale Installation (1.01)</a> etwa 11 MB</li>
     <li>md5 - 1c434e0cc327478228c828e9fe457773</li>
     <li>sha256 - 10391c3a09530221671c16dbae2653132d82566f84fab50de420e4f437477d09</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Windows '95 und sp&auml;ter, einschlie&szlig;lich Windows 7</b>
-    <a href="http://download.berlios.de/enigma-game/Enigma-w32-1.01-w7.zip">
+    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-w32-1.01-w7.zip">
         Minimale Installation als Zip (1.01)</a> etwa 11 MB</li>
     <li>md5 - 269afb849ec00966a9a4fe8488689143</li>
     <li>sha256 - a738a8b1508675bfaf12db07b7bdb42356f013f4c2d5c2a494516d78d25070a1</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Mac OS X universell</b>
-    <a href="http://download2.berlios.de/enigma-game/Enigma-1.01-OSX.dmg">
+    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-1.01-OSX.dmg">
         Vollst&auml;ndige Installation (1.01)</a> etwa 18 MB</li>
     <li>md5 - 693576941ab19020d82b44095e0f4699</li>
     <li>sha256 - e2822599dfc8e0a888d729f5ad2ce7cdbf2e1e87bca508c8da76c48fbb0023ab</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Slackware 10++</b>
-    <a href="http://download.berlios.de/enigma-game/enigma-1.01-i686-slw1.tgz">
+    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-i686-slw1.tgz">
 	Paket tgz (1.01)</a> etwa 10 MB</li>
     <li>md5 - fb1591cb075d380304b4f91c27d95c89</li>
     <li>sha256 - 65d31f3e4a78db7850dd1016ad1eee66794fdec985c3470619e1468bbba25f45</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Quellcode 32/64-Bit kompatibel, Revision 1914</b>
-    <a href="http://download.berlios.de/enigma-game/enigma-1.01-r1914.tar.gz">
+    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-r1914.tar.gz">
 	tar.gz (1.01)</a> etwa 10 MB</li>
     <li>md5 - f60ccc10326b49b558e4e280075b0e70</li>
     <li>sha256 - 991ca677def3ecda3d52b3cc6ea2b0e8393c47f61168a30ffa9efc9069ffedad</li>
     </ul></li>
-  
+
   <li><ul style="list-style-type:none"><li><b>Levelvorschau-Bilder</b>
-    <a href="http://download.berlios.de/enigma-game/enigma-1.01-previews.zip">
+    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-previews.zip">
 	Zip (1.01)</a> etwa 4 MB</li>
     <li>md5 - 770f81e8d8ef92d8374c8932c3e1a26e</li>
     <li>sha256 - a8ab7a03ce6547e86c44aa9962e171417cb63f8bc2b3527af9da42637e6115b6</li>
-    </ul></li>   
-   
+    </ul></li>
+
   </ul>
 
-  <p>Alle Pakete stehen bei Berlios zur Verf&uuml;gung. Falls Sie Probleme mit
-  dem Download haben, versuchen Sie bitte einen direkten Download von <a
-  href="http://developer.berlios.de/project/showfiles.php?group_id=3972"
-  >Berlios</a> und probieren Sie alle verf&uuml;gbaren Server aus.<p>
+  <p>Alle Pakete stehen bei sourceforge zur Verf&uuml;gung. Falls Sie Probleme mit
+  dem Download haben, versuchen Sie bitte einen direkten Download von
+  <a href="http://sourceforge.net/projects/enigma-game/files/">
+  sourceforge</a> und probieren Sie alle verf&uuml;gbaren Server aus.<p>
 
   <p>Wenn Sie Probleme mit einem der obigen Pakete haben, schreiben Sie
     bitte eine Beschreibung Ihres Problems an die <a
@@ -148,11 +148,11 @@ dieser Seite nach folgenden Kategorien sortiert:
     <li><a href="http://xml.apache.org/xerces-c">Xerces</a>&nbsp;&nbsp;(&ge; 2.4)
   </ul>
 
-  <p>Falls Sie die aktuelle SVN-Entwicklerversion kompilieren m&ouml;chten, 
+  <p>Falls Sie die aktuelle SVN-Entwicklerversion kompilieren m&ouml;chten,
   ben&ouml;tigen Sie zus&auml;tzlich <a href="http://curl.haxx.se/"
   >curl und libcurl4</a>.</p>
 
-  <p>Falls Sie Debian verwenden, sollten Sie die folgenden Pakete 
+  <p>Falls Sie Debian verwenden, sollten Sie die folgenden Pakete
   installiert haben, um die SVN-Entwicklerversion zu kompilieren:</p>
 
   <ul>
@@ -183,7 +183,7 @@ halbes Dutzend Mails im Jahr ausmachte.</p>
 
   <p>Interessiert an der allerneusten Entwicklerversion von Enigma? Diese kann
   aus dem Quellcode-Repository heruntergeladen werden:</p>
-  <pre>svn://svn.berlios.de/enigma-game</pre>
+  <pre>svn://svn.code.sf.net/p/enigma-game/source</pre>
   <p>Bitte lesen Sie die <a href="$$development$$">Entwickler-Seite</a> f&uuml;r
   detaillierte Instruktionen.</p>
 
@@ -194,8 +194,8 @@ halbes Dutzend Mails im Jahr ausmachte.</p>
   befinden sich die &auml;lteren Enigma-Versionen auf verschiedenen
   Servern. Besuchen Sie daf&uuml;r</p>
   <ul>
-  <li><a href="http://developer.berlios.de/project/showfiles.php?group_id=3972">
-    Berlios</a>&nbsp;&nbsp;f&uuml;r aktuellere Versionen,</li>
+  <li><a href="http://sourceforge.net/projects/enigma-game/files/">
+    sourceforge</a>&nbsp;&nbsp;f&uuml;r aktuellere Versionen,</li>
   <li><a href="http://savannah.nongnu.org/download/enigma/">
     http://savannah.nongnu.org/download/enigma/</a>&nbsp;&nbsp;f&uuml;r vorherige Versionen,</li>
   <li><a href="http://www.mag-heut.net/blackball/index.php?act=ST&amp;f=2&amp;t=118">
