--- a/homepage/input/download_ru.html
+++ b/homepage/input/download_ru.html
@@ -6,7 +6,7 @@
 <ul>
   <li><a href="$$download$$#stable">Стабильный выпуск</a> - Самые новые выпущенные пакеты - начните отсюда.</li>
   <li><a href="$$download$$#compilation">Сборка из исходных кодов</a> - Советы для Unix. </li>
-  <li><a href="$$download$$#announce">Список рассылки с уведомлением о выпуске</a> - 
+  <li><a href="$$download$$#announce">Список рассылки с уведомлением о выпуске</a> -
   Получать по почте уведомление о выходе нового выпуска  Enigma.</li>
   <li><a href="$$download$$#devel">Разрабатываемые версии</a> - Скачать самые последние исходные коды.</li>
   <li><a href="$$download$$#oldversions">Старые версии</a></li>
@@ -16,7 +16,7 @@
   <a name="stable">Стабильный выпуск (Версия 1.01)</a></h3>
 
   <p>Наряду с 'Полными' пакетами, мы предлагаем урезанные 'Минимальные' пакеты
-  для пользователей с узкой полосой пропускания. Пакеты 'Минимальный' и 'Исходные коды' не включают в себя пакет 
+  для пользователей с узкой полосой пропускания. Пакеты 'Минимальный' и 'Исходные коды' не включают в себя пакет
   'Эскизы'. Пакеты при этом абсолютно полные, потому что не включенные эскизы
   сгенерируются на лету в течение нескольких секунд при первом вызове меню уровней.</p>
 
@@ -25,49 +25,49 @@
 
   <ul>
   <li><ul style="list-style-type:none"><li><b>Windows '95 и выше, включая Windows 7</b>
-    <a href="http://download.berlios.de/enigma-game/Enigma-1.01-w7.exe">
+    <a href="http://downloads.sourceforge.net/project/enigma-game/Release%201.01/Enigma-1.01-w7.exe">
         Полный мастер установки (1.01)</a> прибл. 15 MB</li>
     <li>md5 - d2a8a16453880660647afd4111d0c81f</li>
     <li>sha256 - 2d34428d57e52bff9338d358fa37d74326c6c51849fa2e8a1aedbe0d2cb12245</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Windows '95 и выше, включая Windows 7</b>
-    <a href="http://download.berlios.de/enigma-game/Enigma-1.01-min-w7.exe">
+    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-1.01-min-w7.exe">
         Минимальный мастер установки (1.01)</a> прибл. 11 MB</li>
     <li>md5 - 1c434e0cc327478228c828e9fe457773</li>
     <li>sha256 - 10391c3a09530221671c16dbae2653132d82566f84fab50de420e4f437477d09</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Windows '95 и выше, включая Windows 7</b>
-    <a href="http://download.berlios.de/enigma-game/Enigma-w32-1.01-w7.zip">
+    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-w32-1.01-w7.zip">
         Минимальный Zip-архив (1.01)</a> прибл. 11 MB</li>
     <li>md5 - 269afb849ec00966a9a4fe8488689143</li>
     <li>sha256 - a738a8b1508675bfaf12db07b7bdb42356f013f4c2d5c2a494516d78d25070a1</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Универсальный мастер установки для Mac OS X</b>
-    <a href="http://download2.berlios.de/enigma-game/Enigma-1.01-OSX.dmg">
+    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-1.01-OSX.dmg">
         Полный мастер установки (1.01)</a> прибл. 18 MB</li>
     <li>md5 - 693576941ab19020d82b44095e0f4699</li>
     <li>sha256 - e2822599dfc8e0a888d729f5ad2ce7cdbf2e1e87bca508c8da76c48fbb0023ab</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Slackware 10++</b>
-    <a href="http://download.berlios.de/enigma-game/enigma-1.01-i686-slw1.tgz">
+    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-i686-slw1.tgz">
 	Пакет tgz (1.01)</a> прибл. 10 MB</li>
     <li>md5 - fb1591cb075d380304b4f91c27d95c89</li>
     <li>sha256 - 65d31f3e4a78db7850dd1016ad1eee66794fdec985c3470619e1468bbba25f45</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Исходные коды, совместимые с 32/64-bit, ревизия 1914</b>
-    <a href="http://download.berlios.de/enigma-game/enigma-1.01-r1914.tar.gz">
+    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-r1914.tar.gz">
 	tar.gz (1.01)</a> прибл. 10 MB</li>
     <li>md5 - f60ccc10326b49b558e4e280075b0e70</li>
     <li>sha256 - 991ca677def3ecda3d52b3cc6ea2b0e8393c47f61168a30ffa9efc9069ffedad</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Эскизы</b>
-    <a href="http://download.berlios.de/enigma-game/enigma-1.01-previews.zip">
+    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-previews.zip">
 	Zip-архив (1.01)</a> прибл. 4 MB</li>
     <li>md5 - 770f81e8d8ef92d8374c8932c3e1a26e</li>
     <li>sha256 - a8ab7a03ce6547e86c44aa9962e171417cb63f8bc2b3527af9da42637e6115b6</li>
@@ -76,8 +76,8 @@
   </ul>
 
   <p>Все пакеты доступны на Berlios. В случае возникновения проблем с загрузкой попытайтесь скачать напрямую с
-  <a href="http://developer.berlios.de/project/showfiles.php?group_id=3972">
-  Berlios</a> и попробуйте каждый из предложенных серверов.<p>
+  <a href="http://sourceforge.net/projects/enigma-game/files/">
+  sourceforge</a> и попробуйте каждый из предложенных серверов.<p>
 
   <p>Пожалуйста, сообщите о проблемах с любым из этих пакетов в <a
     href="mailto:enigma-devel@nongnu.org">список рассылки Enigma</a>.</p>
@@ -103,7 +103,7 @@
 <h3><a class="arrowup" href="$$download$$"><img src="$$imagedir$$/nav_up.gif" alt="Up" border="0" title="К началу страницы"></a>
   <a name="compilation">Сборка из исходных кодов под Unix</a></h3>
 
-  <p>Если Вы не нашли пакетов Enigma для своего дистрибутива Unix, Вы можете 
+  <p>Если Вы не нашли пакетов Enigma для своего дистрибутива Unix, Вы можете
   попытаться скачать пакет с исходными кодами и собрать Enigma самостоятельно. Обычно
   это довольно просто.</p>
 
@@ -157,7 +157,7 @@
 
 <p>Если Вы задались целью получить самую последнюю версию Enigma, мы предлагаем услугу уведомления
 о новых выпусках по электронной почте. Просто зарегистрируйтесь в
-<a href="http://lists.nongnu.org/mailman/listinfo/enigma-announce">списке 
+<a href="http://lists.nongnu.org/mailman/listinfo/enigma-announce">списке
 рассылки с уведомлением о выпуске</a>. Объем почтового трафика будет ограничен одним сообщением о бета или стабильном выпуске
 Enigma, который ещё не превосходил полудюжины сообщений в течение года.</p>
 
@@ -166,7 +166,7 @@ Enigma, который ещё не превосходил полудюжины сообщений в течение года.</p>
 
   <p>Заинтересованы в самой последней разрабатываемой версии Enigma?
   Разрабатываемую версию Enigma можно скачать с её репозитория исходных кодов.</p>
-  <pre>svn://svn.berlios.de/enigma-game</pre>
+  <pre>svn://svn.code.sf.net/p/enigma-game/source</pre>
   <p>За подробными инструкциями прочтите, пожалуйста, <a href="$$development$$">страницу разработки</a>.</p>
 
 <h3><a class="arrowup" href="$$download$$"><img src="$$imagedir$$/nav_up.gif" alt="Up" border="0" title="К началу страницы"></a>
@@ -175,8 +175,8 @@ Enigma, который ещё не превосходил полудюжины сообщений в течение года.</p>
   <p>Из-за изменений в репозитории исходных кодов и серверах загрузки, старые версии
   Enigma можно найти на различных серверах. Посмотрите на</p>
   <ul>
-  <li><a href="http://developer.berlios.de/project/showfiles.php?group_id=3972">
-    Berlios</a>&nbsp;&nbsp;если ищете недавние выпуски.</li>
+  <li><a href="http://sourceforge.net/projects/enigma-game/files/">
+    sourceforge</a>&nbsp;&nbsp;если ищете недавние выпуски.</li>
   <li><a href="http://savannah.nongnu.org/download/enigma/">
     http://savannah.nongnu.org/download/enigma/</a>&nbsp;&nbsp;если ищете предыдущие выпуски</li>
   <li><a href="http://www.mag-heut.net/blackball/index.php?act=ST&amp;f=2&amp;t=118">
