--- a/homepage/input/development_ru.html
+++ b/homepage/input/development_ru.html
@@ -48,11 +48,11 @@
       изображения на более привлекательные.
       <div class="diff">Средне</div></li>
 
-  <li><b>Звуки</b>. Звуковое оформление на данный момент не завершено, а некоторые из 
+  <li><b>Звуки</b>. Звуковое оформление на данный момент не завершено, а некоторые из
       существующих звуков могут (должны!) быть отшлифованы.
       <div class="diff">Средне</div></li>
 
-  <li><b>Техническая поддержка</b>. Чем более популярной становится Enigma, тем более сложные технические 
+  <li><b>Техническая поддержка</b>. Чем более популярной становится Enigma, тем более сложные технические
       вопросы и проблемы рассматриваются на mag-heut.net и в списке рассылки разработчиков.
       Некоторые вопросы уже могут быть расписаны в ветке форума или даже включены
       в FAQ. Любой продвинутый пользователь Enigma с опытом установки на
@@ -101,7 +101,7 @@
 
   <li><b>Редактор уровней</b>. Так как существующие редакторы давно не обновлялись и не так портируемы, как
       Enigma, мы подумываем о редакторе на основе Java, расширении
-      формата уровней XML и интерфейсе к Enigma. Полезный редактор 
+      формата уровней XML и интерфейсе к Enigma. Полезный редактор
       это большой вклад и в целом не так прост.
       <div class="diff">Средне-Сложно</div></li>
 
@@ -128,8 +128,8 @@
   и всех объектов, которые Вы можете использовать. Вам нужно хотя бы пробежаться глазами по
   главам 1 - 3 и помнить, что Вы можете найти подробное описание каждого объекта.<p>
 
-  <p>Для Ваших экспериментов и в качестве практического пособия к составлению уровней, Вы 
-  должны взглянуть на <a href="$$wiki$$">wiki о разработке уровней</a>. В основном она уделяет внимание 
+  <p>Для Ваших экспериментов и в качестве практического пособия к составлению уровней, Вы
+  должны взглянуть на <a href="$$wiki$$">wiki о разработке уровней</a>. В основном она уделяет внимание
   самым общим возможностям объектов и предоставляет Вам достаточное количество примеров кода
   для многих общих задач.</p>
 
@@ -147,10 +147,10 @@
   <a name="app">Разработка приложения</a></h3>
 
   <p>Если Вы хотите скачать самую последнюю версию Enigma, Вам нужно проверить
-  её на нашем <a href="https://developer.berlios.de/svn/?group_id=3972">
-  репозитории исходных кодов на Berlios</a>. Чтобы получить анонимный доступ, просто
+  её на нашем <a href="http://sourceforge.net/p/enigma-game/source/2236/tree/">
+  репозитории исходных кодов на sourceforge</a>. Чтобы получить анонимный доступ, просто
   дайте команду</p>
-  <pre>svn checkout svn://svn.berlios.de/enigma-game/trunk</pre>
+  <pre>svn checkout svn://svn.code.sf.net/p/enigma-game/source/trunk</pre>
   <p>чтобы скачать текущую версию следующего основного выпуска Enigma. Пожалуйста имейте в виду,
   что это будет текущая версия, находящаяся в разработке, проверка может быть неполной,
   а приложение нестабильным.</p>
@@ -166,7 +166,7 @@
   </table>
 
   <p>Вы можете предварительно посмотреть текущее содержимое существующих веток с помощью
-  <a href="http://svn.berlios.de/wsvn/enigma-game">Berlios WebSVN</a>.</p>
+  <a href="http://sourceforge.net/p/enigma-game/source/2236/tree/">sourceforge WebSVN</a>.</p>
 
   <p>Для разработки мы рекомендуем платформу Unix в качестве средства сборки.
   Установка проста, как команда</p>
@@ -177,5 +177,5 @@
 
   <pre>doc/README.mingw32</pre>
 
-  <p>Если Вам нужен доступ на запись к репозиторию, пожалуйста, свяжитесь с нами через 
+  <p>Если Вам нужен доступ на запись к репозиторию, пожалуйста, свяжитесь с нами через
   <a href="$$development$$#maillist">список рассылки</a>.</p>
