-> Added sourceforge to our supporters

--- a/homepage/input/download_ru.html
+++ b/homepage/input/download_ru.html
@@ -75,7 +75,7 @@
 
   </ul>
 
-  <p>Все пакеты доступны на Berlios. В случае возникновения проблем с загрузкой попытайтесь скачать напрямую с
+  <p>Все пакеты доступны на sourceforge. В случае возникновения проблем с загрузкой попытайтесь скачать напрямую с
   <a href="http://sourceforge.net/projects/enigma-game/files/">
   sourceforge</a> и попробуйте каждый из предложенных серверов.<p>
 
