--- a/homepage/input/powered-by_ru.html
+++ b/homepage/input/powered-by_ru.html
@@ -10,6 +10,6 @@
 <a href="http://www.nongnu.org">
 <img src="$$imagedir$$/floating_gnu.png" border="1"  alt="GNU Savannah"></a>
 &nbsp;
-<a href="http://developer.berlios.de">
-<img src="http://developer.berlios.de/bslogo.php?group_id=3972" width="124" height="32" border="0" alt="BerliOS Logo"></a>
+<a href="http://sourceforge.net/">
+<img src="http://sflogo.sourceforge.net/sflogo.php?group_id=622893&type=5" width="210" height="62" border="0" alt="sourceforge Logo"></a>
 </div>
