Updates to homepage.
- Update some references from Berlios to Sourceforge.
  Note however, that not all services has been switched yet.
- Update broken link to BlackballEd.
- Remove a reference to an obsolete statistical php script.

TODO:

- Russian translation for FAQ question about different servers
  (question with anchor "s6q4"): faq_core_ru.html and
  faq_questions_ru.html
- Russian translation for word "obsolete" in links_ru.html.

--- a/homepage/input/faq_core_de.html
+++ b/homepage/input/faq_core_de.html
@@ -645,9 +645,9 @@ schreiben w&uuml;rden wir uns freuen ein kostenloses Belegexemplar zu erhalten.<
 
 
 <h4><a name="s6q4">Warum sind die Enigma Dienste an so vielen unterschiedlichen Adressen?
-Was ist bei Berlios, was bei nongnu, was bei enigma-game.org usw.?</a></h4>
-<p>Als Enigma &ouml;ffentlich verf&uuml;gbar wurde schienen die Dienste die
-<a href="http://savannah.nongnu.org">Savannah (nongnu.org)</a> anbot hinreichend.
+Was ist bei Sourceforge, was bei Berlios, was bei nongnu, was bei enigma-game.org usw.?</a></h4>
+<p>Als Enigma &ouml;ffentlich verf&uuml;gbar wurde, schienen die Dienste, die
+<a href="http://savannah.nongnu.org">Savannah (nongnu.org)</a> anbot, hinreichend.
 Mit der Zeit wechselte die Entwicklung zwischen verschiedenen Quellcodearchiven
 wie <a href="http://www.gnu.org/software/gnu-arch/">Arch</a> und
 <a href="http://www.nongnu.org/cvs/">CVS</a>. Letztendlich nach dem Enigma 0.92
@@ -657,9 +657,19 @@ Zeitpunkt war <a href="http://developer.berlios.de">Berlios</a> einer der wenige
 die diesen ben&ouml;tigten Dienst anboten. Deshalb finden Sie die Entwicklung
 nach 0.92 auf <a href="http://developer.berlios.de/projects/enigma-game">Berlios</a>
 und &auml;ltere Archive auf <a href="http://savannah.nongnu.org/projects/enigma/">Savannah</a>.
-</p>
-
-<p>Andere Dienste wie das <a href="http://www.mag-heut.net">Forum</a> und das
+</p><p>
+Ende 2011 berichtete Berlios von finanziellen Unsicherheiten, so dass wir mit einer
+Einstellung ihres Service rechnen mussten. Obwohl sich sp&auml;ter das Fraunhofer-Institut
+als Sponsor anbat und die Existenz von Berlios sicherte, haben wir bereits &uuml;ber
+einen Wechsel zu <a href="http://sourceforge.net/projects/enigma-game/">Sourceforge</a>
+nachgedacht. F&uuml;r den Wechsel sprach auch die Verf&uuml;gbarkeit des Versionskontrollsystems
+GIT.
+</p><p>
+Der aktuelle Bug-Tracker befindet sich noch immer bei Berlios, bis wir seinen
+Inhalt nach Sourceforge transferieren. Es gibt auch noch einen veralteten
+Bug-Tracker auf Savannah.
+</p><p>
+Andere Dienste wie das <a href="http://www.mag-heut.net">Forum</a> und das
 <a href="$$wiki$$">Wiki</a> wurden als private Dienste von Enigma Nutzern gestartet
 und laufen nach wie vor unver&auml;ndert unter ihren Adressen.</p>
 
