--- a/homepage/input/faq_questions.html
+++ b/homepage/input/faq_questions.html
@@ -157,7 +157,7 @@
 
     <li><a href="$$faq$$#s6q4">
     Why are the Enigma services located at so many different locations?
-    What is located at Berlios, what at nongnu, what at enigma-game.org etc?</a></li>
+    What is located at Sourceforge, what at Berlios, what at nongnu, what at enigma-game.org etc?</a></li>
 
     <li><a href="$$faq$$#s6q1">
     Is there something like an Enigma party or Enigma convention?</a></li>
