--- a/homepage/input/links.html
+++ b/homepage/input/links.html
@@ -2,19 +2,21 @@
 
 <h3>Core Enigma links besides this homepage</h3>
     <ul>
-        <li><a href="http://developer.berlios.de/projects/enigma-game">Berlios Project Page</a></li>
-        <li><a href="http://developer.berlios.de/project/showfiles.php?group_id=3972">Berlios Download</a></li>
+        <li><a href="http://sourceforge.net/projects/enigma-game/">Sourceforge Project Page</a></li>
+        <li><a href="http://sourceforge.net/projects/enigma-game/files/">Sourceforge Download</a></li>
         <li><a href="http://lists.nongnu.org/mailman/listinfo/enigma-announce">Release Annouce Mailing List</a></li>
         <li><a href="http://lists.nongnu.org/mailman/listinfo/enigma-devel">Developer Mailing List</a></li>
+        <li><a href="http://developer.berlios.de/projects/enigma-game">Berlios Project Page (obsolete)</a></li>
+        <li><a href="http://developer.berlios.de/project/showfiles.php?group_id=3972">Berlios Download (obsolete)</a></li>
         <li><a href="http://developer.berlios.de/bugs/?group_id=3972">Berlios Bug Database</a></li>
-        <li><a href="http://developer.berlios.de/svn/?group_id=3972">Berlios Svn Repository Access</a></li>
-        <li><a href="http://developer.berlios.de/mail/?group_id=3972">Berlios Svn Repository Mailing List</a></li>
-        <li><a href="http://savannah.nongnu.org/projects/enigma/">Nongnu Project Page</a></li>
+        <li><a href="http://developer.berlios.de/svn/?group_id=3972">Berlios Svn Repository Access (obsolete)</a></li>
+        <li><a href="http://developer.berlios.de/mail/?group_id=3972">Berlios Svn Repository Mailing List (obsolete)</a></li>
+        <li><a href="http://savannah.nongnu.org/projects/enigma/">Nongnu Project Page (obsolete)</a></li>
 	</ul>
 	<ul>
         <li><a href="http://www.mag-heut.net">Enigma Web Forum</a>
         - A web-based discussion forum for everything related to Enigma</li>
-        <li><a href="http://www.blackballed.uni.cc">BlackBallEd</a>
+        <li><a href="http://blackballed.sourceforge.net/">BlackBallEd</a>
         - An Enigma Level Editor</li>
         <li><a href="http://www.capkoh.narod.ru/SL_MainPage.html">Star.LUA</a>
         - Another Enigma Level Editor</li>
