--- a/homepage/input/links_de.html
+++ b/homepage/input/links_de.html
@@ -2,19 +2,21 @@
 
 <h3>Wichtigste Enigma Links neben dieser Homepage</h3>
     <ul>
-        <li><a href="http://developer.berlios.de/projects/enigma-game">Berlios Projektseite</a></li>
-        <li><a href="http://developer.berlios.de/project/showfiles.php?group_id=3972">Berlios Downloadseite</a></li>
+        <li><a href="http://sourceforge.net/projects/enigma-game/">Sourceforge Project Page</a></li>
+        <li><a href="http://sourceforge.net/projects/enigma-game/files/">Sourceforge Download</a></li>
         <li><a href="http://lists.nongnu.org/mailman/listinfo/enigma-announce">Release Annouce Mailliste</a></li>
         <li><a href="http://lists.nongnu.org/mailman/listinfo/enigma-devel">Entwickler Mailliste</a></li>
         <li><a href="http://developer.berlios.de/bugs/?group_id=3972">Berlios Bugtracker</a></li>
-        <li><a href="http://developer.berlios.de/svn/?group_id=3972">Berlios Svn Repository Access</a></li>
-        <li><a href="http://developer.berlios.de/mail/?group_id=3972">Berlios Svn Repository Mailliste</a></li>
-        <li><a href="http://savannah.nongnu.org/projects/enigma/">Nongnu Projektseite</a></li>
+        <li><a href="http://developer.berlios.de/projects/enigma-game">Berlios Projektseite (veraltet)</a></li>
+        <li><a href="http://developer.berlios.de/project/showfiles.php?group_id=3972">Berlios Downloadseite (veraltet)</a></li>
+        <li><a href="http://developer.berlios.de/svn/?group_id=3972">Berlios Svn Repository Access (veraltet)</a></li>
+        <li><a href="http://developer.berlios.de/mail/?group_id=3972">Berlios Svn Repository Mailliste (veraltet)</a></li>
+        <li><a href="http://savannah.nongnu.org/projects/enigma/">Nongnu Projektseite (veraltet)</a></li>
 	</ul>
 	<ul>
         <li><a href="http://www.mag-heut.net">Enigma Web Forum</a>
         - Eine Internet-Diskussionsplattform f&uuml;r alles, was mit Enigma zu tun hat</li>
-        <li><a href="http://www.blackballed.uni.cc">BlackBallEd</a>
+        <li><a href="http://blackballed.sourceforge.net/">BlackBallEd</a>
         - Ein Leveleditor f&uuml;r Enigma</li>
         <li><a href="http://www.capkoh.narod.ru/SL_MainPage.html">Star.LUA</a>
         - Ein weiterer Leveleditor f&uuml;r Enigma</li>
