--- a/homepage/input/links_ru.html
+++ b/homepage/input/links_ru.html
@@ -2,19 +2,21 @@
 
 <h3>Ключевые ссылки Enigma помимо этой домашней страницы</h3>
     <ul>
-        <li><a href="http://developer.berlios.de/projects/enigma-game">Страница проекта Berlios</a></li>
-        <li><a href="http://developer.berlios.de/project/showfiles.php?group_id=3972">Загрузки Berlios</a></li>
+        <li><a href="http://sourceforge.net/projects/enigma-game/">Sourceforge Project Page</a></li>
+        <li><a href="http://sourceforge.net/projects/enigma-game/files/">Sourceforge Download</a></li>
         <li><a href="http://lists.nongnu.org/mailman/listinfo/enigma-announce">Список рассылки с анонсом выпуска</a></li>
         <li><a href="http://lists.nongnu.org/mailman/listinfo/enigma-devel">Список рассылки разработчиков</a></li>
         <li><a href="http://developer.berlios.de/bugs/?group_id=3972">База данных ошибок Berlios</a></li>
-        <li><a href="http://developer.berlios.de/svn/?group_id=3972">Доступ к Svn-репозиторию Berlios</a></li>
-        <li><a href="http://developer.berlios.de/mail/?group_id=3972">Список рассылки Svn-репозитория Berlios</a></li>
-        <li><a href="http://savannah.nongnu.org/projects/enigma/">Страница проекта Nongnu</a></li>
+        <li><a href="http://developer.berlios.de/projects/enigma-game">Страница проекта Berlios (obsolete)</a></li>
+        <li><a href="http://developer.berlios.de/project/showfiles.php?group_id=3972">Загрузки Berlios (obsolete)</a></li>
+        <li><a href="http://developer.berlios.de/svn/?group_id=3972">Доступ к Svn-репозиторию Berlios (obsolete)</a></li>
+        <li><a href="http://developer.berlios.de/mail/?group_id=3972">Список рассылки Svn-репозитория Berlios (obsolete)</a></li>
+        <li><a href="http://savannah.nongnu.org/projects/enigma/">Страница проекта Nongnu (obsolete)</a></li>
 	</ul>
 	<ul>
         <li><a href="http://www.mag-heut.net">Веб-форум Enigma</a>
         - Веб-ориентированный форум обсуждения всего относящегося к Enigma</li>
-        <li><a href="http://www.blackballed.uni.cc">BlackBallEd</a>
+        <li><a href="http://blackballed.sourceforge.net/">BlackBallEd</a>
         - Редактор уровней Enigma</li>
         <li><a href="http://www.capkoh.narod.ru/SL_MainPage.html">Star.LUA</a>
         - Другой редактор уровней Enigma</li>
