--- a/homepage/input/faq_core.html
+++ b/homepage/input/faq_core.html
@@ -584,7 +584,7 @@ of charge author's copy.</p>
 
 
 <h4><a name="s6q4">Why are the Enigma services located at so many different locations?
-What is located at Berlios, what at nongnu, what at enigma-game.org etc?</a></h4>
+What is located at Sourceforge, what at Berlios, what at nongnu, what at enigma-game.org etc?</a></h4>
 <p>When Enigma got public the services of
 <a href="http://savannah.nongnu.org">Savannah (nongnu.org)</a>
 seemed appropiate. As time went on, the development switched between different
@@ -596,12 +596,21 @@ At that point of time <a href="http://developer.berlios.de">Berlios</a> was one
 of the few that offered the required services. Thus you will find the post 0.92
 development on  <a href="http://developer.berlios.de/projects/enigma-game">Berlios</a> and
 older repositories at <a href="http://savannah.nongnu.org/projects/enigma/">Savannah</a>.
-</p>
-<p>Other services like the <a href="http://www.mag-heut.net">Forum</a> and the
+</p><p>
+In 2011, Berlios stated that they did not find financial support, such that their
+further operation was questionable. Although the Fraunhofer Insitute later agreed
+to sponsor Berlios, we already started to think about transfering our code base to
+<a href="http://sourceforge.net/projects/enigma-game/">Sourceforge</a>.
+A second argument for this was the availability of GIT as version control system.
+</p><p>
+The current bug tracker is still located at Berlios, until we transfer its
+content to Sourceforge. There also is an obselete bug tracker at Savannah.
+</p><p>
+Other services like the <a href="http://www.mag-heut.net">Forum</a> and the
 <a href="$$wiki$$">Wiki</a> started and are still running
-as private services supplied by Enigma users at their addresses.</p>
-
-<p>The homepage is still served by Savannah. But this limits us to static
+as private services supplied by Enigma users at their addresses.
+</p><p>
+The homepage is still served by Savannah. But this limits us to static
 content. Thus we reserved the domain <a href="http://enigma-game.org">enigma-game.org</a>,
 which may be used in the future for dynamic services like score uploading, a network
 game server and more. Currently the address is redirected to Savannah and we are
