Prepare download section for Enigma 1.2 manuals

--- a/homepage/input/support_de.html
+++ b/homepage/input/support_de.html
@@ -28,6 +28,45 @@ und Ihre Bewertungen bestimmen den Level des Monats mit.</p>
 
   <p>Viel Spa&szlig;!</p>
 
+<!--
+<h3><a class="arrowup" href="$$support$$"><img src="$$imagedir$$/nav_up.gif" alt="Nach oben" border="0" title="back to top"></a>
+  <a name="documentation">Dokumentation f&uuml;r Enigma 1.2</a></h3>
+  <p>Das vollst&auml;ndige Benutzerhandbuch ist in mehreren Sprachen jeder
+  Version von Enigma beigef&uuml;gt. Sie k&ouml;nnen es zus&auml;tzlich auf
+  dieser Seite betrachten oder als PDF herunterladen.</p>
+
+  <ul>
+    <li> <img src="$$imagedir$$/flags25x15/gb.png" border="0" width="25" height="15" alt="Englisch" title="Englisch">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma.html">English User manual (html)</a></li>
+    <li><img src="$$imagedir$$/flags25x15/gb.png" border="0" width="25" height="15" alt="Englisch" title="Englisch">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma.pdf">English User manual (pdf)</a></li>
+    <li><img src="$$imagedir$$/flags25x15/de.png" border="0" width="25" height="15" alt="Deutsch" title="Deutsch">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma_de.html">Deutsches Benutzerhandbuch (html)</a></li>
+    <li><img src="$$imagedir$$/flags25x15/de.png" border="0" width="25" height="15" alt="Deutsch" title="Deutsch">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma_de.pdf">Deutsches Benutzerhandbuch (pdf)</a></li>
+    <li><img src="$$imagedir$$/flags25x15/fr.png" border="0" width="25" height="15" alt="Franz&ouml;sisch" title="Franz&ouml;sisch">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma_fr.html">Manuel Fran&ccedil;ais (html)</a></li>
+    <li><img src="$$imagedir$$/flags25x15/fr.png" border="0" width="25" height="15" alt="Franz&ouml;sisch" title="Franz&ouml;sisch">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma_fr.pdf">Manuel Fran&ccedil;ais (pdf)</a></li>
+    <li><img src="$$imagedir$$/flags25x15/ru.png" border="0" width="25" height="15" alt="Russisch" title="Russisch">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma_ru.html">Russisches Benutzerhandbuch (html)</a></li>
+    <li><img src="$$imagedir$$/flags25x15/ru.png" border="0" width="25" height="15" alt="Russisch" title="Russisch">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma_ru.pdf">Russisches Benutzerhandbuch (pdf, aus der html Version gedruckt)</a></li>
+  </ul>
+
+  <p>Desweiteren stellen wir ein Referenzhandbuch zur Verf&uuml;gung, das
+  ebenfalls im Enigma-Paket enthalten ist. Viele Details in der Referenz
+  werden nicht nur f&uuml;r Poweruser und Entwickler hilfreich sein.</p>
+  <ul>
+    <li> <img src="$$imagedir$$/flags25x15/gb.png" border="0" width="25" height="15" alt="Englisch" title="Englisch">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma-ref.html">Englisches Referenzhandbuch (html)</a></li>
+  </ul>
+  <p>Aktuell gibt es keine weiteren &Uuml;bersetzungen der
+  Enigma-Handb&uuml;cher. Bitte senden Sie uns eine Email an <a
+  href="mailto:enigma-devel@nongnu.org">enigma-devel@nongnu.org</a>, falls
+  Sie eine &Uuml;bersetzung beisteuern wollen.</p>
+-->
+
 <h3><a class="arrowup" href="$$support$$"><img src="$$imagedir$$/nav_up.gif" alt="Nach oben" border="0" title="back to top"></a>
   <a name="documentation">Dokumentation f&uuml;r Enigma 1.00</a></h3>
   <p>Das vollst&auml;ndige Benutzerhandbuch ist in mehreren Sprachen jeder
