--- a/homepage/input/support_ru.html
+++ b/homepage/input/support_ru.html
@@ -21,6 +21,44 @@
 
   <p>Желаем хорошо провести время!</p>
 
+<!--
+<h3><a class="arrowup" href="$$support$$"><img src="$$imagedir$$/nav_up.gif" alt="Up" border="0" title="К началу страницы"></a>
+  <a name="documentation">Документация для Enigma 1.2</a></h3>
+  <p>Полное руководство пользователя на нескольких языках включается в каждый
+  выпуск Enigma. Кроме того, Вы можете прочесть его с этого сайта или скачать
+  PDF-версию документа.</p>
+
+  <ul>
+    <li> <img src="$$imagedir$$/flags25x15/gb.png" border="0" width="25" height="15" alt="English" title="English">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma.html">English User manual (html)</a></li>
+    <li><img src="$$imagedir$$/flags25x15/gb.png" border="0" width="25" height="15" alt="English" title="English">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma.pdf">English User manual (pdf)</a></li>
+    <li><img src="$$imagedir$$/flags25x15/de.png" border="0" width="25" height="15" alt="German" title="German">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma_de.html">Deutsches Benutzerhandbuch (html)</a></li>
+    <li><img src="$$imagedir$$/flags25x15/de.png" border="0" width="25" height="15" alt="German" title="German">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma_de.pdf">Deutsches Benutzerhandbuch (pdf)</a></li>
+    <li><img src="$$imagedir$$/flags25x15/fr.png" border="0" width="25" height="15" alt="French" title="French">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma_fr.html">Manuel Fran&ccedil;ais (html)</a></li>
+    <li><img src="$$imagedir$$/flags25x15/fr.png" border="0" width="25" height="15" alt="French" title="French">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma_fr.pdf">Manuel Fran&ccedil;ais (pdf)</a></li>
+    <li><img src="$$imagedir$$/flags25x15/ru.png" border="0" width="25" height="15" alt="Russian" title="Russian">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma_ru.html">Русскоязычное руководство пользователя (html)</a></li>
+    <li><img src="$$imagedir$$/flags25x15/ru.png" border="0" width="25" height="15" alt="Russian" title="Russian">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma_ru.pdf">Русскоязычное руководство пользователя (pdf, printed from html version)</a></li>
+  </ul>
+
+  <p>В дополнение мы предлагаем справочное руководство, которое также включено в
+  пакет Enigma. Множество перечисленных в нем подробностей будут полезны не
+  только для опытных пользователей и разработчиков.</p>
+  <ul>
+    <li> <img src="$$imagedir$$/flags25x15/gb.png" border="0" width="25" height="15" alt="English" title="English">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma-ref.html">English Reference manual (html)</a></li>
+  </ul>
+  <p>На данный момент других переводов руководств Enigma нет.
+  Пожалуйста, если Вы хотите способствовать переводу, пришлите письмо в
+  <a href="mailto:enigma-devel@nongnu.org">enigma-devel@nongnu.org</a>.</p>
+-->
+
 <h3><a class="arrowup" href="$$support$$"><img src="$$imagedir$$/nav_up.gif" alt="Up" border="0" title="К началу страницы"></a>
   <a name="documentation">Документация для Enigma 1.00</a></h3>
   <p>Полное руководство пользователя на нескольких языках включается в каждый
