--- a/homepage/input/support.html
+++ b/homepage/input/support.html
@@ -20,6 +20,44 @@ for the level of the month.</p>
 
   <p>Have fun!</p>
 
+<!--
+<h3><a class="arrowup" href="$$support$$"><img src="$$imagedir$$/nav_up.gif" alt="Up" border="0" title="back to top"></a>
+  <a name="documentation">Documentation for Enigma 1.2</a></h3>
+  <p>The complete user manual is included in multiple languages with every release
+  of Enigma. You can additionally access it from this site or download a PDF
+  version of the document.</p>
+
+  <ul>
+    <li> <img src="$$imagedir$$/flags25x15/gb.png" border="0" width="25" height="15" alt="English" title="English">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma.html">English User manual (html)</a></li>
+    <li><img src="$$imagedir$$/flags25x15/gb.png" border="0" width="25" height="15" alt="English" title="English">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma.pdf">English User manual (pdf)</a></li>
+    <li><img src="$$imagedir$$/flags25x15/de.png" border="0" width="25" height="15" alt="German" title="German">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma_de.html">Deutsches Benutzerhandbuch (html)</a></li>
+    <li><img src="$$imagedir$$/flags25x15/de.png" border="0" width="25" height="15" alt="German" title="German">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma_de.pdf">Deutsches Benutzerhandbuch (pdf)</a></li>
+    <li><img src="$$imagedir$$/flags25x15/fr.png" border="0" width="25" height="15" alt="French" title="French">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma_fr.html">Manuel Fran&ccedil;ais (html)</a></li>
+    <li><img src="$$imagedir$$/flags25x15/fr.png" border="0" width="25" height="15" alt="French" title="French">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma_fr.pdf">Manuel Fran&ccedil;ais (pdf)</a></li>
+    <li><img src="$$imagedir$$/flags25x15/ru.png" border="0" width="25" height="15" alt="Russian" title="Russian">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma_ru.html">Russian User manual (html)</a></li>
+    <li><img src="$$imagedir$$/flags25x15/ru.png" border="0" width="25" height="15" alt="Russian" title="Russian">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma_ru.pdf">Russian User manual (pdf, printed from html version)</a></li>
+  </ul>
+
+  <p>Further on we provide a reference manual which is included in the Enigma
+  package, too. Many details listed here will be helpful not only for
+  power users and developers.</p>
+  <ul>
+    <li> <img src="$$imagedir$$/flags25x15/gb.png" border="0" width="25" height="15" alt="English" title="English">&nbsp;&nbsp;
+      <a href="manual_1.20/enigma-ref.html">English Reference manual (html)</a></li>
+  </ul>
+  <p>No other translations of the Enigma manuals are available so far.
+  Please send an email to <a  href="mailto:enigma-devel@nongnu.org">enigma-devel@nongnu.org</a> if
+  you would like to contribute a translation.</p>
+-->
+
 <h3><a class="arrowup" href="$$support$$"><img src="$$imagedir$$/nav_up.gif" alt="Up" border="0" title="back to top"></a>
   <a name="documentation">Documentation for Enigma 1.00</a></h3>
   <p>The complete user manual is included in multiple languages with every release
